# fishtrackdeepl

./: AppDec.cpp  AppEncCuda.cpp  CMakeLists.txt  NvDecoder.cpp  blob_detection.py  video_capture.cpp  video_encoder.cpp
Samples/: Makefile  NvCodec.sln
Samples/AppDecode/AppDec/: AppDec.cpp
Samples/AppDecode/AppDecD3D/: AppDecD3D.cpp
Samples/AppDecode/AppDecGL/: AppDecGL.cpp
Samples/AppDecode/AppDecImageProvider/: AppDecImageProvider.cpp
Samples/AppDecode/AppDecLowLatency/: AppDecLowLatency.cpp
Samples/AppDecode/AppDecMem/: AppDecMem.cpp
Samples/AppDecode/AppDecMultiFiles/: AppDecMultiFiles.cpp
Samples/AppDecode/Common/: AppDecUtils.h
Samples/AppEncode/AppEncCuda/: AppEncCuda.cpp  AppEncCuda.vcxproj  AppEncCuda.vcxproj.filters
Samples/AppEncode/AppEncD3D11/: AppEncD3D11.cpp  AppEncD3D11.vcxproj  AppEncD3D11.vcxproj.filters
Samples/AppEncode/AppEncD3D9/: AppEncD3D9.cpp  AppEncD3D9.vcxproj
Samples/AppEncode/AppEncDec/: AppEncDec.cpp  AppEncDec.vcxproj
Samples/AppEncode/AppEncGL/: AppEncGL.cpp
Samples/AppEncode/AppEncLowLatency/: AppEncLowLatency.cpp  AppEncLowLatency.vcxproj
Samples/AppEncode/AppEncME/: AppEncME.cpp  AppEncME.vcxproj
Samples/AppEncode/AppEncMEOutputInVidMem/: AppEncMEOutputInVidMem.cpp  AppEncMEOutputInVidMem.vcxproj  AppEncMEOutputInVidMem.vcxproj.filters  Makefile
Samples/AppEncode/AppEncOutputInVidMem/: AppEncOutputInVidMem.cpp  AppEncOutputInVidMem.vcxproj  AppEncOutputInVidMem.vcxproj.filters
Samples/AppEncode/AppEncPerf/: AppEncPerf.cpp
Samples/AppEncode/AppEncQual/: AppEncQual.cpp  AppEncQual.vcxproj
Samples/AppEncode/AppMotionEstimationVkCuda/: AppMotionEstimationVkCuda.cpp  Makefile  NvEnc.h  utility.cpp  utility.h
Samples/AppTranscode/AppTrans/: AppTrans.cpp  AppTrans.vcxproj  Makefile
Samples/AppTranscode/AppTransOneToN/: AppTransOneToN.cpp  AppTransOneToN.vcxproj
Samples/AppTranscode/AppTransPerf/: AppTransPerf.cpp  AppTransPerf.vcxproj  Makefile
cmake/: FindPylon.cmake
